# SoftwareTeamDevelopment

./: CMakeLists.txt  README.md
3Dtest/: CameraActor.cpp  Game.vcxproj  Renderer.h  makefile
Input_test/: .nfs00000000051238ed0000002d  input.h  main  main.cpp
Input_test/Input_test/: .nfs00000000051238f80000003a  .nfs00000000051238f90000003b  client_main  iput.cpp  makefile
_tests/audio_test/: component.h  main  main.cpp
_tests/sample/: Actor.cpp  Actor.h  Animation.cpp  Animation.h  BallActor.cpp  BallActor.h  BallMove.h  BoneTransform.h  BoxComponent.h  CameraComponent.cpp  CameraComponent.h  Component.cpp  DialogBox.h  FollowActor.h  FollowCamera.h  GBuffer.h  Game.cpp  HUD.h  LevelLoader.cpp  Math.h  MatrixPalette.h  Mesh.h  MeshComponent.h  MirrorCamera.h  MoveComponent.h  (+18 more)
audio_test/: audio.h  main  main.cpp  makefile  sound_system.cpp  sound_system.h
client/: .fuse_hidden000000e100000001  gdb.txt  main  make.sh  makefile  run_program.sh
client_old/: makefile
cmake/: CMakeCache.txt
input_test/: input.h  iput.cpp  main
lib/: libSOIL.so.1
net_test/: makefile
server/: main  makefile
test/: Actor.cpp  Component.h  DialogBox.cpp  Font.h  LevelLoader.h  Main  Mesh.cpp  Shader.cpp  Shader.h  SpriteComponent.h  makefile
test2/: banana.mtl  main.cpp
test3/: Actor.h  Collision.h  Game.h  Game.vcxproj  LevelLoader.cpp  Main  PhysWorld.cpp  Renderer.cpp  Skeleton.cpp  Texture.cpp  input.h
test4/: Main  lighting.fs  lighting.vs  main  main.cpp  makefile  mygame  shader.cpp  shader.h  shadow_depth.fs  vertexArray.cpp  vertexArray.h  vertices.h
(+500 files in other folders)
